# Hyper-Alpha-Arena

./: .gitignore  AUDIT_FIXES_SUMMARY.md  CIRCULAR_IMPORT_FIX_SUMMARY.md  CODE_REVIEW_FIXES_SUMMARY.md  CODE_REVIEW_REPORT.md  CODE_SMELLS_FIXES_SUMMARY.md  CODE_SMELLS_REVIEW.md  INDEPENDENT_CODE_REVIEW.md  INDEPENDENT_REVIEW_FIXES_SUMMARY.md  KRAKEN_MODULE_FIX_SUMMARY.md  LOGGER_SYSTEM_FIXES_SUMMARY.md  LOGGER_SYSTEM_REVIEW.md  PLACEHOLDER_CHECK_REPORT.md  TRADING_SYSTEM_AUDIT_REPORT.md  pyproject.toml  test_kraken_balance.py
backend/: main.py  pyproject.toml
backend/api/: account_management_routes.py  account_routes.py  arena_routes.py  market_data_routes.py  order_routes.py  ws.py
backend/config/: settings.py
backend/database/: connection.py  models.py
backend/repositories/: account_repo.py  kline_repo.py  strategy_repo.py
backend/schemas/: account.py
backend/services/: ai_decision_service.py  asset_curve_calculator.py  asset_snapshot_service.py  binance_sync.py  broker_adapter.py  broker_factory.py  broker_interface.py  broker_kraken.py  kraken_sync.py  order_executor.py  order_matching.py  position_sync.py  scheduler.py  startup.py  system_logger.py  trading_commands.py  trading_strategy.py
frontend/app/: main.tsx
frontend/app/components/layout/: Header.tsx  SettingsDialog.tsx
frontend/app/components/trading/: AuthDialog.tsx
frontend/app/lib/: api.ts
kraken/: account.py  auth.py  kraken_request.py  market.py  trade.py
