[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyper-alpha-arena-backend"
version = "0.2.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "pandas>=2.3.3",
    "ccxt>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-core>=2.14.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

